// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: should compile a callable reflection 1`] = `
"[helper: breadcrumbs]

# Interface: CallableReflection

_\\"reflections\\".CallableReflection_

## Hierarchy

[helper: hierarchy]

## Callable

[partial: member.signature]

[partial: members]
"
`;

exports[`Reflections: should compile an indexable reflection 1`] = `
"[helper: breadcrumbs]

# Interface: IndexableReflection

_\\"reflections\\".IndexableReflection_

## Hierarchy

[helper: hierarchy]

## Indexable

▪ \\\\[index: *number*\\\\]: *string*

[partial: comment]

[partial: members]
"
`;

exports[`Reflections: should compile module without breadcrumbs 1`] = `
"# Module: \\"reflections\\"

[partial: index]

[partial: members]
"
`;

exports[`Reflections: should compile reflection with type params 1`] = `
"[helper: breadcrumbs]

# Interface: ReflectionWithTypeParams ‹**T, V**›

_\\"reflections\\".ReflectionWithTypeParams_

## Type parameters

* T
* V

## Hierarchy

[helper: hierarchy]

[partial: members]
"
`;
